Inseri um <p> tag

--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@
     </head>
     <body>
         <h1>Olá, Mundo</h1>
+        <p>Minha primeira atualização!</p>
+        </body>
     </body>
 </html>
